mdapipkg/unpackaged/objects/Trouble_ticket__c.object
<CustomObject>
    <fields>
        <fullName>checkbox__c</fullName>
        <defaultValue>false</defaultValue>
        <label>checkbox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dependebale__c</fullName>
        <label>dependebale</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>checkbox__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>x</fullName>
                </value>
                <value>
                    <fullName>y</fullName>
                </value>
                <value>
                    <fullName>z</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>fffff__c</fullName>
        <label>fffff</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>fffggf</fullName>
                </value>
                <value>
                    <fullName>fgfhgfh</fullName>
                </value>
                <value>
                    <fullName>gfjghjghkgj</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Trouble Ticket</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Trouble ticket Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Trouble Tickets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>